--- a/my-gdx-game-html/war/index.html
+++ b/my-gdx-game-html/war/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>my-gdx-game</title>
+		<title>blues-bros-bbq</title>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<style>
 			canvas {
